trajectory_tracker: Add trajectory recorder, saver, and server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(trajectory_tracker)
 ## Find catkin and any catkin packages
 find_package(catkin REQUIRED COMPONENTS roscpp rospy nav_msgs geometry_msgs tf)
 
+add_service_files(FILES ChangePath.srv)
+generate_messages(DEPENDENCIES std_msgs)
+
 ## Declare a catkin package
 catkin_package(
     DEPENDS roscpp nav_msgs geometry_msgs tf
@@ -14,4 +17,14 @@ include_directories(${catkin_INCLUDE_DIRS})
 
 add_executable(trajectory_tracker src/trajectory_tracker.cpp)
 target_link_libraries(trajectory_tracker ${catkin_LIBRARIES})
+
+add_executable(trajectory_recorder src/trajectory_recorder.cpp)
+target_link_libraries(trajectory_recorder ${catkin_LIBRARIES})
+
+add_executable(trajectory_saver src/trajectory_saver.cpp)
+target_link_libraries(trajectory_saver ${catkin_LIBRARIES})
+
+add_executable(trajectory_server src/trajectory_server.cpp)
+target_link_libraries(trajectory_server ${catkin_LIBRARIES})
+add_dependencies(trajectory_server trajectory_tracker_gencpp)
 
