--- a/config/global_costmap_params.yaml
+++ b/config/global_costmap_params.yaml
@@ -1,9 +1,19 @@
 global_costmap:
   global_frame: /map
   robot_base_frame: base_link
-  update_frequency: 1.0
-  static_map: true
-  inflation_radius: 0.5
-  robot_radius: 0.9
-  footprint_padding: 0.05
-
+  update_frequency: 0.5
+  static_map: false
+  footprint_padding: 0.15
+  plugins:
+   - {name: static_layer, type: "costmap_2d::StaticLayer"}
+   - {name: footprint_layer, type: "costmap_2d::FootprintLayer"}
+   - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
+   - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
+  obstacle_layer:
+    observation_sources: laser
+    combination_method: 1
+    laser: {topic: scan, data_type: LaserScan, expected_update_rate: 0.5, observation_persistence: 0.0, marking: true, clearing: true}
+  static_layer:
+    unknown_cost_value: 254
+  inflation_layer:
+    inflation_radius: 1.2
