--- a/config/local_costmap_params.yaml
+++ b/config/local_costmap_params.yaml
@@ -1,17 +1,25 @@
 local_costmap:
   global_frame: /map
   robot_base_frame: base_link
-  update_frequency: 1.0
-  publish_frequency: 1.0
-  static_map: true 
+  update_frequency: 3
+  publish_frequency: 1.5
+  static_map: false
   rolling_window: true
   width: 5.0
   height: 5.0
-  resolution: 0.1
+  resolution: 0.05
+  footprint_padding: 0.1
   plugins:
+   - {name: static_layer, type: "costmap_2d::StaticLayer2"}
    - {name: footprint_layer, type: "costmap_2d::FootprintLayer"}
    - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
    - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
   obstacle_layer:
     observation_sources: laser
-    laser: {topic: scan, data_type: LaserScan, expected_update_rate: 1.0, observation_persistence: 0.0, marking: true, clearing: true}
+    combination_method: 1
+    laser: {topic: scan, data_type: LaserScan, expected_update_rate: 3, observation_persistence: 0.0, marking: true, clearing: true}
+  static_layer:
+    unknown_cost_value: 255
+    use_maximum: false
+  inflation_layer:
+    inflation_radius: 0.9
