--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <build_depend>tf_conversions</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>map_server</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>roscpp</run_depend>
@@ -32,4 +33,5 @@
   <run_depend>tf_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>map_server</run_depend>
 </package>
