map_organizer: adds node to save map array

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,5 @@ target_link_libraries(pointcloud_to_maps ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 add_executable(tie_maps src/tie_maps.cpp)
 target_link_libraries(tie_maps yaml-cpp ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 
+add_executable(save_maps src/save_maps.cpp)
+target_link_libraries(save_maps ${catkin_LIBRARIES} ${PCL_LIBRARIES})
