changes planner and costmap package names with a postfix _cspace

--- a/costmap_cspace/CMakeLists.txt
+++ b/costmap_cspace/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(costmap)
+project(costmap_cspace)
 
 find_package(catkin REQUIRED COMPONENTS
 	roscpp sensor_msgs geometry_msgs message_generation
