--- a/costmap_cspace/package.xml
+++ b/costmap_cspace/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>planner</name>
+  <name>costmap_cspace</name>
   <version>0.0.0</version>
-  <description>The planner package</description>
+  <description>The costmap package</description>
 
   <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
   <license>BSD</license>
@@ -13,15 +13,11 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>tf</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>message_runtime</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>message_generation</run_depend>
   <run_depend>message_runtime</run_depend>
 
   <export>
