--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -33,9 +33,9 @@ include_directories(${catkin_INCLUDE_DIRS})
 
 add_executable(planner_3d src/planner_3d.cpp src/grid_astar.hpp)
 target_link_libraries(planner_3d ${catkin_LIBRARIES})
-add_dependencies(planner_3d costmap_gencpp planner_gencpp planner_generate_messages_cpp)
+add_dependencies(planner_3d costmap_cspace_generate_messages planner_cspace_generate_messages)
 
 add_executable(planner_2dof_serial_joints src/planner_2dof_serial_joints.cpp src/grid_astar.hpp)
 target_link_libraries(planner_2dof_serial_joints ${catkin_LIBRARIES})
-add_dependencies(planner_2dof_serial_joints planner_gencpp planner_generate_messages_cpp)
+add_dependencies(planner_2dof_serial_joints planner_cspace_generate_messages)
 
