--- a/track_odometry/package.xml
+++ b/track_odometry/package.xml
@@ -17,6 +17,7 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>rostest</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>tf</run_depend>
@@ -25,6 +26,7 @@
   <run_depend>nav_msgs</run_depend>
   <run_depend>trajectory_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>rostest</run_depend>
 
   <export>
   </export>
