track_odometry: removes projected tf output and add tf_projection node (#17)

--- a/track_odometry/CMakeLists.txt
+++ b/track_odometry/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 catkin_package(
-	CATKIN_DEPENDS roscpp tf sensor_msgs std_msgs nav_msgs trajectory_msgs geometry_msgs
+	CATKIN_DEPENDS roscpp tf sensor_msgs std_msgs nav_msgs trajectory_msgs geometry_msgs rostest
 	DEPENDS system_lib
 )
 
@@ -26,3 +26,14 @@ include_directories(${catkin_INCLUDE_DIRS})
 
 add_executable(track_odometry src/track_odometry.cpp)
 target_link_libraries(track_odometry ${catkin_LIBRARIES})
+
+add_executable(tf_projection src/tf_projection.cpp)
+target_link_libraries(tf_projection ${catkin_LIBRARIES})
+
+if(CATKIN_ENABLE_TESTING)
+	find_package(catkin REQUIRED COMPONENTS roscpp tf rostest)
+
+	catkin_add_gtest(tf_projection_test src/tf_projection_test.cpp)
+	target_link_libraries(tf_projection_test ${catkin_LIBRARIES})
+endif()
+
