track_odometry: refactors tf_projection test code

--- a/track_odometry/CMakeLists.txt
+++ b/track_odometry/CMakeLists.txt
@@ -31,7 +31,7 @@ add_executable(tf_projection src/tf_projection.cpp)
 target_link_libraries(tf_projection ${catkin_LIBRARIES})
 
 if(CATKIN_ENABLE_TESTING)
-	find_package(catkin REQUIRED COMPONENTS roscpp tf rostest)
+	find_package(rostest REQUIRED)
 
 	catkin_add_gtest(tf_projection_test src/tf_projection_test.cpp)
 	target_link_libraries(tf_projection_test ${catkin_LIBRARIES})
