planner_cspace: adds service to forget remembered costmap

--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 add_message_files(FILES PlannerStatus.msg)
+add_service_files(FILES Forget.srv)
 generate_messages(DEPENDENCIES std_msgs)
 
 catkin_package(
