--- a/costmap_cspace/package.xml
+++ b/costmap_cspace/package.xml
@@ -16,6 +16,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>laser_geometry</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>tf2_sensor_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
@@ -23,6 +24,7 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>laser_geometry</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>tf2_sensor_msgs</run_depend>
 
   <export>
   </export>
