Fix coding styles.

--- a/costmap_cspace/CMakeLists.txt
+++ b/costmap_cspace/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(costmap_cspace)
 
 find_package(catkin REQUIRED COMPONENTS
-	roscpp sensor_msgs geometry_msgs message_generation laser_geometry tf tf2_sensor_msgs
+	roscpp sensor_msgs geometry_msgs message_generation laser_geometry tf tf2_sensor_msgs rostest roslint
 )
 
 add_message_files(
@@ -12,6 +12,7 @@ generate_messages(
 	DEPENDENCIES std_msgs geometry_msgs
 )
 catkin_package(
+  INCLUDE_DIRS include
   CATKIN_DEPENDS roscpp sensor_msgs geometry_msgs message_runtime laser_geometry tf tf2_sensor_msgs
 	DEPENDS system_lib
 )
@@ -39,4 +40,15 @@ target_link_libraries(laserscan_to_map ${catkin_LIBRARIES})
 
 add_executable(pointcloud2_to_map src/pointcloud2_to_map.cpp)
 target_link_libraries(pointcloud2_to_map ${catkin_LIBRARIES})
+
+
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
+
+roslint_cpp()
+
+if(CATKIN_ENABLE_TESTING)
+  roslint_add_test()
+endif()
+
 
