--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(planner_cspace)
 
 find_package(catkin REQUIRED COMPONENTS
-	roscpp sensor_msgs geometry_msgs tf message_generation message_runtime costmap_cspace
+	roscpp sensor_msgs geometry_msgs tf message_generation message_runtime costmap_cspace rostest roslint
 )
 
 add_message_files(FILES PlannerStatus.msg)
@@ -29,13 +29,20 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops -finline-functions")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
 #set(CMAKE_LD_FLAGS "${CMAKE_CXX_FLAGS} -pg")
 
-include_directories(${catkin_INCLUDE_DIRS})
+include_directories(${catkin_INCLUDE_DIRS} include)
 
-add_executable(planner_3d src/planner_3d.cpp src/grid_astar.hpp)
+add_executable(planner_3d src/planner_3d.cpp)
 target_link_libraries(planner_3d ${catkin_LIBRARIES})
 add_dependencies(planner_3d costmap_cspace_generate_messages planner_cspace_generate_messages)
 
-add_executable(planner_2dof_serial_joints src/planner_2dof_serial_joints.cpp src/grid_astar.hpp)
+add_executable(planner_2dof_serial_joints src/planner_2dof_serial_joints.cpp)
 target_link_libraries(planner_2dof_serial_joints ${catkin_LIBRARIES})
 add_dependencies(planner_2dof_serial_joints planner_cspace_generate_messages)
+
+
+roslint_cpp()
+
+if(CATKIN_ENABLE_TESTING)
+  roslint_add_test()
+endif()
 
