--- a/costmap_cspace/package.xml
+++ b/costmap_cspace/package.xml
@@ -17,6 +17,8 @@
   <build_depend>laser_geometry</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>tf2_sensor_msgs</build_depend>
+  <build_depend>rostest</build_depend>
+  <build_depend>roslint</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
