--- a/map_organizer/package.xml
+++ b/map_organizer/package.xml
@@ -21,6 +21,8 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>map_server</build_depend>
+  <build_depend>rostest</build_depend>
+  <build_depend>roslint</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>roscpp</run_depend>
