--- a/obj_to_pointcloud/package.xml
+++ b/obj_to_pointcloud/package.xml
@@ -18,6 +18,8 @@
   <build_depend>eigen_conversions</build_depend>
   <build_depend>tf_conversions</build_depend>
   <build_depend>pcl_ros</build_depend>
+  <build_depend>rostest</build_depend>
+  <build_depend>roslint</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>roscpp</run_depend>
