--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -17,6 +17,8 @@
   <build_depend>message_generation</build_depend>
   <build_depend>message_runtime</build_depend>
   <build_depend>costmap_cspace</build_depend>
+  <build_depend>rostest</build_depend>
+  <build_depend>roslint</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
