--- a/track_odometry/package.xml
+++ b/track_odometry/package.xml
@@ -18,6 +18,7 @@
   <build_depend>trajectory_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>rostest</build_depend>
+  <build_depend>roslint</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>tf</run_depend>
