--- a/track_odometry/CMakeLists.txt
+++ b/track_odometry/CMakeLists.txt
@@ -42,3 +42,11 @@ if(CATKIN_ENABLE_TESTING)
   roslint_add_test()
 endif()
 
+install(TARGETS
+    track_odometry
+    tf_projection
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
