Fixing Costmap3DOF class structure and adding tests.

--- a/costmap_cspace/CMakeLists.txt
+++ b/costmap_cspace/CMakeLists.txt
@@ -45,6 +45,7 @@ target_link_libraries(pointcloud2_to_map ${catkin_LIBRARIES})
 roslint_cpp()
 
 if(CATKIN_ENABLE_TESTING)
+  add_subdirectory(test)
   roslint_add_test()
 endif()
 
