--- a/costmap_cspace/package.xml
+++ b/costmap_cspace/package.xml
@@ -19,6 +19,7 @@
   <build_depend>tf2_sensor_msgs</build_depend>
   <build_depend>rostest</build_depend>
   <build_depend>roslint</build_depend>
+  <build_depend>xmlrpcpp</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
@@ -27,6 +28,7 @@
   <run_depend>laser_geometry</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>tf2_sensor_msgs</run_depend>
+  <run_depend>xmlrpcpp</run_depend>
 
   <export>
   </export>
