--- a/safety_limiter/package.xml
+++ b/safety_limiter/package.xml
@@ -18,6 +18,7 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>rostest</build_depend>
   <build_depend>roslint</build_depend>
+  <build_depend>xmlrpcpp</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>roscpp</run_depend>
@@ -26,4 +27,5 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>tf_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
+  <run_depend>xmlrpcpp</run_depend>
 </package>
