--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -11,8 +11,10 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roscpp</build_depend>
+  <build_depend>actionlib</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>move_base_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>message_runtime</build_depend>
@@ -21,8 +23,10 @@
   <build_depend>roslint</build_depend>
 
   <run_depend>roscpp</run_depend>
+  <run_depend>actionlib</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>move_base_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>message_runtime</run_depend>
