--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -1,26 +1,42 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(planner_cspace)
 
-find_package(catkin REQUIRED COMPONENTS
-	roscpp sensor_msgs geometry_msgs tf message_generation message_runtime costmap_cspace rostest roslint
+find_package(catkin REQUIRED
+  COMPONENTS
+    roscpp
+    actionlib
+    sensor_msgs
+    geometry_msgs
+    move_base_msgs
+    tf
+    message_generation
+    costmap_cspace
+    rostest
+    roslint
 )
 
 add_message_files(FILES PlannerStatus.msg)
 generate_messages(DEPENDENCIES std_msgs)
 
 catkin_package(
-	CATKIN_DEPENDS roscpp sensor_msgs geometry_msgs tf costmap_cspace
+  CATKIN_DEPENDS
+    roscpp
+    sensor_msgs
+    geometry_msgs
+    move_base_msgs
+    tf
+    costmap_cspace
 )
 
 include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
 CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
 if(COMPILER_SUPPORTS_CXX11)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 elseif(COMPILER_SUPPORTS_CXX0X)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 else()
-	message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+  message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops -finline-functions")
