--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -15,6 +15,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>move_base_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>message_runtime</build_depend>
@@ -27,6 +28,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>move_base_msgs</run_depend>
+  <run_depend>nav_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>message_runtime</run_depend>
