Make the code work.

--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -61,6 +61,9 @@ add_dependencies(planner_2dof_serial_joints planner_cspace_generate_messages)
 add_executable(dummy_robot src/dummy_robot.cpp)
 target_link_libraries(dummy_robot ${catkin_LIBRARIES})
 
+add_executable(patrol src/patrol.cpp)
+target_link_libraries(patrol ${catkin_LIBRARIES})
+
 
 roslint_cpp()
 
