--- a/planner_cspace/test/CMakeLists.txt
+++ b/planner_cspace/test/CMakeLists.txt
@@ -12,3 +12,9 @@ catkin_add_gtest(test_blockmem_gridmap_performance src/test_blockmem_gridmap_per
 target_link_libraries(test_blockmem_gridmap_performance ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 # Force release build since it contains performance test.
 set_target_properties(test_blockmem_gridmap_performance PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS_RELEASE}")
+
+add_rostest_gtest(test_navigate
+  test/navigation_rostest.test
+  src/test_navigate.cpp
+)
+target_link_libraries(test_navigate ${catkin_LIBRARIES})
