--- a/neonavigation_launch/config/navigate.yaml
+++ b/neonavigation_launch/config/navigate.yaml
@@ -4,11 +4,12 @@ costmap_3d:
   linear_spread: 0.3
   layers:
     overlay1:
+      type: Costmap3dLayerFootprint
       overlay_mode: max
       linear_expand: 0.15
       linear_spread: 0.3
     overlay2:
+      type: Costmap3dLayerPlain
       overlay_mode: max
       linear_expand: 0.0
       linear_spread: 0.0
-      footprint: [[0.01, -0.01], [0.01, 0.01], [-0.01, 0.01], [-0.01, -0.01]]
