Add static layer to sample launch

--- a/neonavigation_launch/config/navigate.yaml
+++ b/neonavigation_launch/config/navigate.yaml
@@ -2,6 +2,12 @@ costmap_3d:
   ang_resolution: 16
   linear_expand: 0.08
   linear_spread: 0.3
+  static_layers:
+    overlay0:
+      type: Costmap3dLayerPlain
+      overlay_mode: max
+      linear_expand: 0.0
+      linear_spread: 0.0
   layers:
     overlay1:
       type: Costmap3dLayerFootprint
