--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED
 )
 
 find_package(Boost REQUIRED COMPONENTS chrono)
+find_package(OpenMP REQUIRED)
 
 add_message_files(FILES PlannerStatus.msg)
 generate_messages(DEPENDENCIES std_msgs)
@@ -43,7 +44,7 @@ else()
   message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops -finline-functions")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops -finline-functions ${OpenMP_CXX_FLAGS}")
 
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
 #set(CMAKE_LD_FLAGS "${CMAKE_CXX_FLAGS} -pg")
