--- a/safety_limiter/CMakeLists.txt
+++ b/safety_limiter/CMakeLists.txt
@@ -2,12 +2,28 @@ cmake_minimum_required(VERSION 2.8.3)
 project(safety_limiter)
 
 ## Find catkin and any catkin packages
-find_package(catkin REQUIRED COMPONENTS cmake_modules roscpp geometry_msgs tf sensor_msgs pcl_ros tf_conversions rostest roslint)
+find_package(catkin REQUIRED
+  COMPONENTS
+    cmake_modules
+    roscpp
+    geometry_msgs
+    tf
+    sensor_msgs
+    pcl_ros
+    tf_conversions
+    rostest
+    roslint
+)
 find_package(PCL REQUIRED)
 
 ## Declare a catkin package
 catkin_package(
-    DEPENDS roscpp geometry_msgs tf sensor_msgs pcl_ros
+  DEPENDS
+    roscpp
+    geometry_msgs
+    tf
+    sensor_msgs
+    pcl_ros
 )
 include_directories(${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${Eigen_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
@@ -37,6 +53,7 @@ roslint_cpp()
 
 if(CATKIN_ENABLE_TESTING)
   roslint_add_test()
+  add_subdirectory(test)
 endif()
 
 install(TARGETS
