--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 install: true
 
 script:
-  - docker build --cache-from $DOCKER_CACHE -t docker-neonavigation:latest --pull=true ${TRAVIS_BUILD_DIR}
+  - docker build --cache-from ${DOCKER_CACHE} -t docker-neonavigation:latest --pull=true ${TRAVIS_BUILD_DIR}
   - docker run --rm -it -e TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST} -e TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG} -e TRAVIS_BOT_GITHUB_TOKEN=${TRAVIS_BOT_GITHUB_TOKEN} docker-neonavigation /catkin_ws/src/neonavigation/.travis.scripts/test.sh
   - .travis.scripts/save_cache.sh
 
