--- a/neonavigation_launch/config/navigate.yaml
+++ b/neonavigation_launch/config/navigate.yaml
@@ -3,6 +3,9 @@ costmap_3d:
   linear_expand: 0.08
   linear_spread: 0.3
   static_layers:
+    unknown:
+      type: Costmap3dLayerUnknownHandle
+      unknown_cost: 100
     overlay0:
       type: Costmap3dLayerPlain
       overlay_mode: max
