--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,22 @@ services: docker
 
 env:
   global:
-    - DOCKER_CACHE=atwat/ros-neonavigation-cache
+    - PACKAGE_NAME=mcl_3dl
+    - DOCKER_CACHE_TARGET=neonavigation
+    - DOCKER_CACHE_REGISTRY=atwat/ros-neonavigation-cache
+  matrix:
+    - ROS_DISTRO_TARGET=kinetic
 branches:
   only:
     - master
 
 before_install:
-  - .travis.scripts/load_cache.sh
+  - .travis/load_cache.sh
 
 install: true
 
 script:
-  - docker build --cache-from ${DOCKER_CACHE} -t docker-neonavigation:latest --pull=true ${TRAVIS_BUILD_DIR}
-  - docker run --rm -it -e TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST} -e TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG} -e TRAVIS_BOT_GITHUB_TOKEN=${TRAVIS_BOT_GITHUB_TOKEN} docker-neonavigation /catkin_ws/src/neonavigation/.travis.scripts/test.sh
-  - .travis.scripts/save_cache.sh
+  - docker build --cache-from ${DOCKER_CACHE_REGISTRY}:${ROS_DISTRO_TARGET} -t ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} -f Dockerfile.${ROS_DISTRO_TARGET} --pull=true ${TRAVIS_BUILD_DIR}
+  - docker run --rm -it -e TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST} -e TRAVIS_PULL_REQUEST_SLUG=${TRAVIS_PULL_REQUEST_SLUG} -e TRAVIS_BOT_GITHUB_TOKEN=${TRAVIS_BOT_GITHUB_TOKEN} ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
+  - .travis/save_cache.sh
 
