--- a/Dockerfile.kinetic
+++ b/Dockerfile.kinetic
@@ -43,7 +43,7 @@ COPY ./obj_to_pointcloud/package.xml /catkin_ws/src/neonavigation/obj_to_pointcl
 COPY ./track_odometry/package.xml /catkin_ws/src/neonavigation/track_odometry/
 
 RUN apt-get -qq update \
-  && rosdep install --from-paths /catkin_ws/src/neonavigation --ignore-src --rosdistro=${ROS_DISTRO} -y \
+  && rosdep install --from-paths /catkin_ws/src --ignore-src --rosdistro=${ROS_DISTRO} -y \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
